# kernel

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  build.sh  vendor_device.md
.gitee/: 2.1提交模板.md
config/: compile_options.cmake  config.cmake  config.in  cross_compile_toolchain.cmake
source/: CMakeLists.txt
source/arch/arm/: CMakeLists.txt
source/arch/arm/common/: lookup_processor.S  mmu.S  weak.S
source/arch/arm/include/asm/: memory.h  page.h  procinfo.h  section.h
source/arch/arm/start/: CMakeLists.txt  linker.lds.S  linker32.lds.S  start32.S  start_common.S  virt_ext.S  weak.S
source/core/3.时钟管理/: sys_tick.c
source/include/: CMakeLists.txt
source/include/asm/: linkage.h  linker.lds.h
source/include/kernel/: init.h  linkage.h  sizes.h  types.h
source/include/uapi/huaxiaos/: ASM_types.h  elf.h  types.h
source/init/: main.c
